# refute-inspect

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
src/refute_inspect/: __init__.py  refute_inspect.py
tests/: test_refute_inspect.py
